<resources>
    <string name="app_name">MDP G7 AY1920S2</string>

    <string name="button_scan_devices">Scan Devices</string>
    <string name="button_send_data">Send Data</string>
    <string name="button_set_origin">Set Origin</string>
    <string name="button_set_waypoint">Set Waypoint</string>
    <string name="button_start">Start</string>
    <string name="button_reset_map">Reset Map</string>
    <string name="button_reset_activity">Reset</string>
    <string name="button_refresh">Update</string>

    <string name="label_bluetooth">Bluetooth</string>
    <string name="label_time">Time</string>
    <string name="label_status">Status</string>
    <string name="label_position">Position</string>
    <string name="label_robot_position">Robot\'s Position</string>
    <string name="label_waypoint">Way Point</string>
    <string name="label_configurations">Configurations</string>
    <string name="label_remote_controller">Remote Controller</string>
    <string name="label_arrow">Arrow</string>
    <string name="label_image">Image</string>
    <string name="label_image_vert">I\nM\nA\nG\nE</string>
    <string name="label_imageDes">Latest Recognition</string>

    <string name="textbox_test_serial">Send a String</string>
    <string name="not_connected">Not Connected</string>
    <string name="time_placeholder">00 m 00 s</string>
    <string name="idle_robot_state">Robot is Idle</string>
    <string name="robot_pos_placeholder">[X, Y] : [1, 1]</string>
    <string name="waypoint_placeholder">[X, Y] : [13, 18]</string>

    <string name="option_exploration">Exploration</string>
    <string name="option_fastest_path">Fastest Path</string>
    <string name="option_auto">Auto</string>
    <string name="option_manual">Manual</string>

    <string name="switch_motion">Motion Control</string>
    <string name="recognized_image">Recognized Image</string>
    <string name="y_coords">Y</string>
    <string name="x_coords">X</string>
    <string name="wp_x_placeholder">13</string>
    <string name="wp_y_placeholder">18</string>
    <string name="rp_placeholder">1</string>
    <string name="mdf_string_1">MDF String 1</string>
    <string name="mdf_placeholder">0x0000000000000000</string>
    <string name="mdf_string_2">MDF String 2</string>
    <string name="image_string">Image String</string>
    <string name="bluetooth_connection">Bluetooth Connection</string>
    <string name="bluetooth_disconnect_prompt">Before using this feature, please disconnect current connections</string>
    <string name="start_bt_server">Start Bluetooth Server</string>
    <string name="mdf_manager">MDF Manager</string>
    <string name="mdf_export_prompt">Click Item to Export</string>
    <string name="message_log">Message Log</string>
    <string name="btn_send">Send</string>
    <string name="hint_send_message">Write message to send here</string>
    <string name="strings_configuration">Strings Configuration</string>
    <string name="string_1_config">String 1</string>
    <string name="string_2_config">String 2</string>
    <string name="btn_send_string_1">Send String 1</string>
    <string name="btn_send_string_2">Send String 2</string>
    <string name="btn_save_strings">Save Strings</string>
    <string name="string_2_hint">String 2 Text Here</string>
    <string name="string_1_hint">String 1 Text Here</string>
    <string name="tv_placeholder">TextView</string>
    <string name="btn_clear_all">Clear All</string>
</resources>
