<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content" xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/label_dialog_message_log_title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/message_log"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/colorLabelDialogTitle"
        android:background="@color/colorAppTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingBottom="5dp"
        android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scrollbars="vertical"
            android:id="@+id/msg_scroll_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:overScrollMode="always"
            android:background="@drawable/listview_border"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/message_log"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:gravity="bottom"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/textbox_send_message"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:layout_marginEnd="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:inputType="text"
                android:textSize="16sp"
                android:autofillHints="@string/hint_send_message"
                android:hint="@string/hint_send_message"
                android:ems="10"
                android:singleLine="true"
                android:text=""
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button_send_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:layout_marginStart="5dp"
                android:background="@color/colorAppTheme"
                android:textColor="@color/colorButtonTextTheme"
                android:text="@string/btn_send" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>